--- a/A_mini_project_1.css
+++ b/A_mini_project_1.css
@@ -1,16 +1,16 @@
-*{
+* {
     padding: 0;
     margin: 0;
-    font-family: 'Poopins',sans-serif;
+    font-family: 'Poopins', sans-serif;
 }
 
-.main_box{
+.main_box {
     background: url("photo.jpg");
     height: 100vh;
     background-size: cover;
 }
 
-.btn_one i{
+.btn_one i {
     color: white;
     font-size: 30px;
     font-weight: 700;
@@ -20,25 +20,25 @@
     transition: all 0.3s linear;
 }
 
-.sidebar_menu{
+.sidebar_menu {
     position: fixed;
     left: -300px;
     height: 100vh;
     width: 300px;
-    background-color: rgb(255,255,255,0.1);
-    box-shadow: 0 0 6px rgba(255,255,255,0.5);
+    background-color: rgb(255, 255, 255, 0.1);
+    box-shadow: 0 0 6px rgba(255, 255, 255, 0.5);
     transition: all 0.3s linear;
 }
 
-.sidebar_menu .logo{
+.sidebar_menu .logo {
     position: absolute;
     width: 100%;
     line-height: 60px;
-    box-shadow: 0 2px 4px rgba(255,255,255,0.5);
+    box-shadow: 0 2px 4px rgba(255, 255, 255, 0.5);
     height: 60px;
 }
 
-.sidebar_menu .logo a{
+.sidebar_menu .logo a {
     position: absolute;
     left: 50px;
     color: white;
@@ -47,13 +47,13 @@
     font-weight: 500;
 }
 
-.sidebar_menu .menu{
+.sidebar_menu .menu {
     position: absolute;
     width: 100%;
     top: 80px;
 }
 
-.sidebar_menu .btn_two i{
+.sidebar_menu .btn_two i {
     color: gray;
     font-size: 25px;
     font-weight: 700;
@@ -65,63 +65,64 @@
     transition: all 0.3s linear;
 }
 
-.sidebar_menu .menu li{
+.sidebar_menu .menu li {
     margin-top: 6px;
     padding: 14px 20px;
 }
 
-.sidebar_menu .menu i,a{
+.sidebar_menu .menu i,
+a {
     color: white;
     text-decoration: none;
     font-size: 14px;
 }
 
-.sidebar_menu .menu i{
+.sidebar_menu .menu i {
     padding-right: 8px;
 }
 
-.social_media{
+.social_media {
     position: absolute;
     left: 25%;
     bottom: 50px;
 }
 
-.sidebar_menu .social_media i{
+.sidebar_menu .social_media i {
     color: white;
     opacity: 0.5;
     padding: 0 5px;
 }
 
-#check{
+#check {
     display: none;
 }
 
-.sidebar_menu .menu li:hover{
-    box-shadow: 0 0 4px rgba(255,255,255,0.5);
+.sidebar_menu .menu li:hover {
+    box-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
 }
 
-.btn_one i:hover{
+.btn_one i:hover {
     font-size: 40px;
 }
 
-.btn_two i:hover{
+.btn_two i:hover {
     font-size: 30px;
 }
 
-.social_media i:hover{
+.social_media i:hover {
     opacity: 1;
     transform: scale(1.2);
 }
 
-#check:checked ~.sidebar_menu{
+#check:checked~.sidebar_menu {
     left: 0;
 }
 
-#check:checked ~ .btn_one i{
+#check:checked~.btn_one i {
     opacity: 0;
 }
 
-#check:checked ~ .sidebar_menu .btn_two i{
+#check:checked~.sidebar_menu .btn_two i {
     opacity: 1;
 }
 
